--- a/nodejs/static/predict-with-tfjs.html
+++ b/nodejs/static/predict-with-tfjs.html
@@ -10,14 +10,21 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-12">
-                    <div class="progress progress-bar progress-bar-striped progress-bar-animated md-2">Loading Model</div>
+                    <div class="progress progress-bar progress-bar-striped progress-bar-animated md-2" style="display:none">Loading Model</div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-3">
+                    <select id="model-selector" class="custom-select">
+                        <option selected disabled>Select Model</option>
+                        <option>MobileNet</option>
+                        <option>VGG16</option>
+                    </select>
+                </div>
+                <div class="col-8">
                     <input id="image-selector" class="from-control border-0" type="file" />
                 </div>
-                <div class="col-6">
+                <div class="col-1">
                     <button id="predict-button" class="btn btn-dark float-right">PREDICT</button>
                 </div>
             </div>
