--- a/nodejs/static/predict-with-tfjs.html
+++ b/nodejs/static/predict-with-tfjs.html
@@ -25,7 +25,7 @@
                     <input id="image-selector" class="from-control border-0" type="file" />
                 </div>
                 <div class="col-1">
-                    <button id="predict-button" class="btn btn-dark float-right">PREDICT</button>
+                    <span id="predict-button"></span>
                 </div>
             </div>
             <hr />
